canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: my-app.hyukjin.io    
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-service 
            port:
              number: 80
